# geo-credit-score-ai

./: README.md
fraud-detection-ai/: main.py  pyproject.toml
geo_credit_score_ai/: README.md  analyze_smote.py  main.py  pyproject.toml  visualize_model.py  warnings
geo_credit_score_ai/config/: model_config.yaml
geo_credit_score_ai/src/: config.py  constants.py  validation.py  visualization.py
geo_credit_score_ai/src/data/: __init__.py  dataset.py
geo_credit_score_ai/src/geo/: __init__.py  features.py
geo_credit_score_ai/src/models/: __init__.py  pipeline.py
geo_credit_score_ai/tests/: __init__.py  conftest.py  test_config.py  test_constants.py  test_data.py  test_geo.py  test_pipeline.py  test_validation.py
